<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="19dp"
    android:background="@android:color/holo_purple"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="21sp"
        />
    <EditText
        android:id="@+id/et_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_nom"
        android:gravity="center"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/tv_num_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_intentos"
        android:layout_below="@+id/et_nom"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:textSize="21sp"
        />
    <EditText
        android:id="@+id/et_num_int"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_num_int"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:inputType="number"
        />
    <Button
        android:id="@+id/btn_acceso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_acceder1"
        android:layout_below="@+id/et_num_int"
        android:layout_marginTop="50dp"
        android:onClick="acceder"
        android:background="@android:color/holo_blue_dark"
        />
    <TextView
        android:id="@+id/tv_resul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_acceso"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:textSize="22sp"
        />

</RelativeLayout>